--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> Portrait of Shangyu </title>
         <style>
             body {
-                background-image: url('cosmos.jpg');
+                background-image: url('cosmos.png');
             }
 
         </style>
