--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> Portrait of Shangyu </title>
         <style>
             body {
-                background-image: url('cosmos.png');
+                background-image: url('cosmos.jpg');
             }
 
         </style>
@@ -29,8 +29,8 @@
             <br></br>
 
             <div style="text-align : center;">
-                <img src="Saturn.jpg" alt="Saturn" width="300" height="150">
-                <img src="Saturn.jpg" alt="Saturn" width="300" height="150"> 
+                <img src="Saturn.png" alt="Saturn" width="300" height="150">
+                <img src="Saturn.png" alt="Saturn" width="300" height="150"> 
             </div>
 
             
